--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.giovannicm.craftingInterpreters</groupId>
-  <artifactId>crafinting-interpreters</artifactId>
+  <artifactId>crafting-interpreters</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>crafinting-interpreters</name>
+  <name>crafting-interpreters</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
